# BooklyAi

./: .gitignore  README.md  package-lock.json  package.json
backend/: .gitignore  app.py  pyproject.toml
backend/src/api/classification/: io.py  routes.py
backend/src/globals/: environment.py
backend/src/models/: book.py
backend/src/modules/: classifier.py
frontend/: package-lock.json  package.json
frontend/.next/: trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/static/chunks/: [root of the server]__14669f._.js  [root of the server]__14669f._.js.map  [root of the server]__577f55._.js  [root of the server]__577f55._.js.map  _121fa1._.js.map  _af2bc4._.js  _af2bc4._.js.map  _f0b58d._.js.map  node_modules_1a8ee9._.js  node_modules_1a8ee9._.js.map  node_modules_2bd162._.js  node_modules_2bd162._.js.map  node_modules_2c25cd._.js  node_modules_2c25cd._.js.map  node_modules_2ce51c._.js  node_modules_2ce51c._.js.map  node_modules_344188._.js  node_modules_344188._.js.map  node_modules_69e050._.js.map  node_modules_954861._.js  node_modules_954861._.js.map  node_modules_@swc_helpers_cjs_00636a._.js.map  node_modules_dd1a02._.js  node_modules_dd1a02._.js.map  node_modules_f6d85b._.js  node_modules_f6d85b._.js.map  node_modules_framer-motion_dist_es_9a447c._.js  node_modules_framer-motion_dist_es_9a447c._.js.map  node_modules_next_dist_client_34bfc0._.js  src_019c5f._.js  (+34 more)
frontend/src/app/: page.tsx
(+75 files in other folders)
