[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Caleb Free <cdfree@unc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
openai = "^1.54.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
fastapi = {extras = ["standard"], version = "^0.115.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
